# solar_prediction

./: .gitignore  DATA_FLOW_AND_MODEL_LIFECYCLE_DIAGRAM.md  README.md  README_LSTM.md  arima.py  best_model.pt  data_prep.py  gru.py  lstm.py  main.py  plot_utils_new.py  processing_test.py  pyproject.toml  requirements.txt  solar_data_gru.ipynb  solar_data_notebook.ipynb  solar_data_notebook_lstm.ipynb  solar_data_notebook_second_dataset.ipynb  solar_data_sarima.ipynb  solar_data_tdmc.ipynb  solartdmc_test.py  tdmc.md  tdmc.py  weather_lstm_model.pt
docs/: ERROR_HANDLING_LOGGING_ANALYSIS.md  NUMERICAL_STABILITY_REPORT.md  SARIMA_MEMORY_BENCHMARK_SUMMARY.md  TDMC_IMPLEMENTATION_SUMMARY.md  numerical_stability_analysis.md
examples/: example_chunked_loading.py  example_optimized_pipeline.py
notebooks/: colab_full_run_actual_data.ipynb  colab_gru_tuning_actual_data.ipynb  colab_horizon_sweep_actual_data.ipynb  colab_smoke_check.ipynb  solar_data_gru.ipynb  solar_data_notebook_lstm.ipynb  solar_data_sarima.ipynb  solar_data_tdmc.ipynb
scripts/: memory_benchmark_sarima.py  sarima_memory_benchmark.py
solar_prediction/: __init__.py  benchmark.py  checkpointing.py  cli.py  config.py  data_loader.py  data_prep.py  gru.py  lstm.py  memory_tracker.py  plot_utils.py  sarima.py  tdmc.py
tests/: __init__.py  conftest.py  test_chunked_loader.py  test_cli.py  test_data_pipeline.py  test_enhanced_checkpointing.py  test_memory.py  test_models.py  test_performance.py  test_sarima_edge_cases.py  test_tdmc.py  test_tdmc_edge_cases.py  test_tdmc_transitions.py  test_utils.py
(+2 files in other folders)
